<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        app:showAsAction="always"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_player"
        android:icon="@drawable/player"
        android:title="@string/title_coming_soon" />

    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/download"
        android:title="@string/title_download" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more"
        android:title="@string/title_more" />

</menu>
