<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/end_color">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/end_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/clear_iv"
            android:layout_width="@dimen/width_1"
            android:layout_height="@dimen/height_1"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clear" />

        <ImageView
            android:id="@+id/detail_movie_iv"
            android:layout_width="@dimen/width_3"
            android:layout_height="@dimen/height_5"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_iv"
            app:srcCompat="@drawable/bangin" />

        <TextView
            android:id="@+id/movie_year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:text="@string/detail_lbl1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_2"
            app:layout_constraintStart_toStartOf="@+id/detail_movie_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_iv" />

        <TextView
            android:id="@+id/movie_duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:text="@string/detail_lbl3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_2"
            app:layout_constraintBottom_toBottomOf="@+id/movie_year_tv"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_iv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_year_tv"
            app:layout_constraintTop_toTopOf="@+id/movie_year_tv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_4"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            android:background="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_year_tv">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/width_2"
                android:layout_height="@dimen/height_3"
                android:layout_marginStart="@dimen/margin_6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/play" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_1"
                android:text="@string/detail_lbl4"
                android:textColor="@color/white"
                android:textSize="@dimen/text_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5"
                app:layout_constraintVertical_bias="0.44" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/movie_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            android:text="@string/detail_lbl8"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/width_2"
            android:layout_height="@dimen/height_3"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_desc_tv"
            app:srcCompat="@drawable/add" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_2"
            android:text="@string/detail_lbl5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/width_2"
            android:layout_height="@dimen/height_3"
            android:layout_marginStart="@dimen/margin_5"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/rate" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:text="@string/detail_lbl6"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:text="@string/detail_lbl7"
        android:textColor="@color/white"
        android:textSize="@dimen/text_3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/more_movies_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginBottom="@dimen/margin_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>